# bazel-examples-gha

./: .bazelrc  .gitlab-ci.yml  BUILD.bazel  MODULE.bazel  eslint.config.mjs  go.mod  go.sum  pnpm-lock.yaml
.aspect/: config.axl
.aspect/cli/: config.yaml
.aspect/workflows/: README.md  buildkite.yaml  config.yaml
.circleci/: config.yml
.github/workflows/: .aspect-workflows-reusable.yaml  aspect-workflows-delivery.yaml  aspect-workflows-warming.yaml  aspect-workflows.yaml
go_workspaces/module1/: main.go  main_test.go
logger/backend/cmd/server/: server.go
logger/cli/: BUILD.bazel  __main__.py  __main__2.py
logger/frontend/: BUILD.bazel  index.ts  package.json
logger/schema/: BUILD.bazel
nodejs_apps/buf_printer/: BUILD
nodejs_apps/javascript/src/: main.js
nodejs_apps/typescript/: BUILD.bazel
npm_packages/napi/src/: index.ts
npm_packages/one/src/: lib.ts
oci_go_image/: BUILD.bazel  directory_hashes.bzl  gha_delivery_trigger.bzl  gha_delivery_trigger.sh.tpl  main.go  main_test.go
oci_python_image/hello_world/: BUILD.bazel  app.py  app_test.py  integration_test.py
prisma/: BUILD.bazel
qwik/app/: package.json
qwik/app/src/: entry.ssr.tsx
qwik/lib/: package.json
tools/: cpp.MODULE.bazel  jvm.MODULE.bazel  nodejs.MODULE.bazel  preset.bazelrc  protobuf.MODULE.bazel  python.MODULE.bazel  ruby.MODULE.bazel  tools.lock.json
tools/lint/: linters.bzl
